--- a/index.html
+++ b/index.html
@@ -1,12 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <style>
+        .font-roboto {
+            font-family: "Roboto", sans-serif;
+        }
+
+        .font-bebas {
+            font-family: "Bebas Neue", sans-serif;
+        }
+    </style>
 </head>
-<body>
-    
+
+<body class="">
+    <header class=" bg-[#FFFBF0]">
+        <div id="header-container" class="pt-10 pb-10 max-w-6xl text-center m-auto">
+            <nav class="flex justify-between">
+                <div class="logo-container">
+                    <img class="max-w-72" src="icons/logo.png" alt="">
+                </div>
+                <div class="nav-content flex gap-14 font-roboto font-medium">
+                    <li class="list-none"><a href="#">Home</a></li>
+                    <li class="list-none"><a href="#">Product</a></li>
+                    <li class="list-none"><a href="#">About Us</a></li>
+                    <li class="list-none"><a href="#">Contact Us</a></li>
+                </div>
+            </nav>
+            <div id="banner" class="my-5 flex justify-between items-center">
+                <div id="banner-content" class="text-left">
+                    <h1 class="text-[#FABE4C] font-bebas text-7xl">Be the Penguins <br> <span class="text-[#363958]">of
+                            Winter</span></h1>
+                    <p class="font-roboto my-2">Lorem Ipsum is simply dummy text of the printing <br>and typesetting
+                        industry.</p>
+                    <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-8 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                </div>
+                <div id="banner-img">
+                    <img src="images/model.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="max-w-6xl m-auto">
+        <div id="women" class="mt-24">
+            <h1 class="uppercase font-bebas text-5xl text-[#363958]">WoMan Jacket</h1>
+            <div id="card-container" class="flex gap-5 justify-around mt-5">
+                <div id="card" class="max-w-96 font-roboto p-5 ">
+                    <div id="img-container" class="bg-[#F1F1F1] rounded-2xl  p-5 mt-4">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <h2 class="text-2xl font-bold text-[#363958] mt-2">Yellow Coat Jacket </h2>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
+                        <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
+                        <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+                <div id="card" class="max-w-96 font-roboto p-5 ">
+                    <div id="img-container" class="bg-[#F1F1F1] rounded-2xl  p-5 mt-4">
+                        <img src="images/jacket-2.png" alt="">
+                    </div>
+                    <h2 class="text-2xl font-bold text-[#363958] mt-2">Yellow Coat Jacket </h2>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
+                        <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
+                        <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+                <div id="card" class="max-w-96 font-roboto p-5 ">
+                    <div id="img-container" class="bg-[#F1F1F1] rounded-2xl  p-5 mt-4">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <h2 class="text-2xl font-bold text-[#363958] mt-2">Yellow Coat Jacket </h2>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
+                        <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
+                        <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="Man" class="mt-24">
+            <h1 class="uppercase font-bebas text-5xl text-[#363958]">Man Jacket</h1>
+            <div id="card-container" class="flex gap-5 justify-around mt-5">
+                <div id="card" class="max-w-96 font-roboto p-5 ">
+                    <div id="img-container" class="bg-[#F1F1F1] rounded-2xl  p-5 mt-4">
+                        <img src="images/jacket-4.png" alt="">
+                    </div>
+                    <h2 class="text-2xl font-bold text-[#363958] mt-2">Yellow Coat Jacket </h2>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
+                        <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
+                        <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+                <div id="card" class="max-w-96 font-roboto p-5 ">
+                    <div id="img-container" class="bg-[#F1F1F1] rounded-2xl  p-5 mt-4">
+                        <img src="images/jacket-5.png" alt="">
+                    </div>
+                    <h2 class="text-2xl font-bold text-[#363958] mt-2">Yellow Coat Jacket </h2>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
+                        <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
+                        <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+                <div id="card" class="max-w-96 font-roboto p-5 ">
+                    <div id="img-container" class="bg-[#F1F1F1] rounded-2xl  p-5 mt-4">
+                        <img src="images/jacket-6.png" alt="">
+                    </div>
+                    <h2 class="text-2xl font-bold text-[#363958] mt-2">Yellow Coat Jacket </h2>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
+                        <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
+                        <button
+                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
