--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
                         <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
                         <button
-                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                        </svg>
-                        BUY NOW</button>
+                            class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
                     </div>
                 </div>
                 <div id="card" class="max-w-96 font-roboto p-5 ">
@@ -90,13 +90,13 @@
                     <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
                         <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
                         <button
-                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                        </svg>
-                        BUY NOW</button>
+                            class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
                     </div>
                 </div>
                 <div id="card" class="max-w-96 font-roboto p-5 ">
@@ -109,13 +109,13 @@
                     <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
                         <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
                         <button
-                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                        </svg>
-                        BUY NOW</button>
+                            class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
                     </div>
                 </div>
             </div>
@@ -133,13 +133,13 @@
                     <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
                         <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
                         <button
-                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                        </svg>
-                        BUY NOW</button>
+                            class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
                     </div>
                 </div>
                 <div id="card" class="max-w-96 font-roboto p-5 ">
@@ -152,13 +152,13 @@
                     <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
                         <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
                         <button
-                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                        </svg>
-                        BUY NOW</button>
+                            class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
                     </div>
                 </div>
                 <div id="card" class="max-w-96 font-roboto p-5 ">
@@ -171,18 +171,47 @@
                     <div id="card-footer" class="flex justify-between gap-15 items-center mt-3">
                         <h3 class="font-black text-4xl text-[#FABE4C]">$230</h3>
                         <button
-                        class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                        </svg>
-                        BUY NOW</button>
+                            class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] flex gap-1 py-5 px-5 rounded-lg font-medium text-white"><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            BUY NOW</button>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer class="max-w-6xl m-auto flex justify-between mt-28">
+        <div id="footer-content">
+            <div id="service-1" class="flex justify-between items-center gap-9 max-w-52">
+                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/house.png" alt=""></div>
+                <div id="service-content">
+                    <h3>Find the Perfect Fit</h3>
+                    <p>One of the many reasons you can shop
+                        with peace of mind.</p>
+                </div>
+            </div>
+            <div id="service-2" class="flex justify-between items-center gap-9">
+                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/house.png" alt=""></div>
+                <div id="service-content">
+                    <h3>Find the Perfect Fit</h3>
+                    <p>One of the many reasons you can shop
+                        with peace of mind.</p>
+                </div>
+            </div>
+            <div id="service-3" class="flex justify-between items-center gap-9 max-w-52">
+                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/house.png" alt=""></div>
+                <div id="service-content">
+                    <h3>Find the Perfect Fit</h3>
+                    <p>One of the many reasons you can shop
+                        with peace of mind.</p>
+                </div>
+            </div>
+        </div>
+        <div id="footer-img"></div>
+    </footer>
 </body>
 
 </html>
