--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <body class="">
     <header class=" bg-[#FFFBF0]">
-        <div id="header-container" class="pt-10 pb-10 max-w-6xl text-center m-auto">
-            <nav class="flex justify-between">
+        <div id="header-container" class="pt-10 pb-10 px-2 max-w-6xl text-center m-auto">
+            <nav class="flex items-center gap-2 lg:justify-between flex-col lg:flex-row">
                 <div class="logo-container">
                     <img class="max-w-72" src="icons/logo.png" alt="">
                 </div>
@@ -36,7 +36,7 @@
                     <li class="list-none"><a href="#">Contact Us</a></li>
                 </div>
             </nav>
-            <div id="banner" class="my-5 flex justify-between items-center">
+            <div id="banner" class="my-5 flex flex-col md:justify-between md:flex-row lg:justify-between items-center">
                 <div id="banner-content" class="text-left">
                     <h1 class="text-[#FABE4C] font-bebas text-7xl">Be the Penguins <br> <span class="text-[#363958]">of
                             Winter</span></h1>
@@ -183,34 +183,36 @@
             </div>
         </div>
     </main>
-    <footer class="max-w-6xl m-auto flex justify-between mt-28">
-        <div id="footer-content">
-            <div id="service-1" class="flex justify-between items-center gap-9 max-w-52">
+    <footer class="max-w-6xl m-auto flex justify-between mt-28 mb-28">
+        <div id="footer-content" class="max-w-[45%]">
+            <div id="service-1" class="mb-4 p-4 flex justify-between items-center gap-7">
                 <div id="service-img" class="max-w-20"><img class="w-max" src="icons/house.png" alt=""></div>
                 <div id="service-content">
-                    <h3>Find the Perfect Fit</h3>
+                    <h3 class="font-bold text-2xl font-roboto text-[#363958]">Find the Perfect Fit</h3>
                     <p>One of the many reasons you can shop
                         with peace of mind.</p>
                 </div>
             </div>
-            <div id="service-2" class="flex justify-between items-center gap-9">
-                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/house.png" alt=""></div>
+            <div id="service-2" class="mb-4 p-4 flex justify-between items-center gap-7">
+                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/box.png" alt=""></div>
                 <div id="service-content">
-                    <h3>Find the Perfect Fit</h3>
+                    <h3 class="font-bold text-2xl font-roboto text-[#363958]">Free Exchanges</h3>
                     <p>One of the many reasons you can shop
                         with peace of mind.</p>
                 </div>
             </div>
-            <div id="service-3" class="flex justify-between items-center gap-9 max-w-52">
-                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/house.png" alt=""></div>
+            <div id="service-3" class="mb-4 p-4 flex justify-between items-center gap-7">
+                <div id="service-img" class="max-w-20"><img class="w-max" src="icons/question.png" alt=""></div>
                 <div id="service-content">
-                    <h3>Find the Perfect Fit</h3>
+                    <h3 class="font-bold text-2xl font-roboto text-[#363958]">Contact Our Seller</h3>
                     <p>One of the many reasons you can shop
                         with peace of mind.</p>
                 </div>
             </div>
         </div>
-        <div id="footer-img"></div>
+        <div id="footer-img " class="max-w-[50%]">
+            <img src="images/shopping.png" alt="">
+        </div>
     </footer>
 </body>
 
